# billiards-common

./: CMakeLists.txt
src/: typescript
src/algebra/: GmpIdeal.h  GmpIndex.h  GmpPoly.h  Ideal.h  Index.h  IndexCache.h  Monomial.h  MultiIndexImpl.h  MultiIndexTree.h  PolyDict.h  Polynomial.h  VariableNames.h  Variety.h  VarietyMatrix.h  VecIndex.h  buchberger.h  f4.h  gmp_scalar.h  parsing.h  poly_divide.h
src/algebra/alg/: F4State.h  Pair.h  PolyMat.h  buchberger.h  check_grobner.h  dense_jordan.h  f4.h  old.h  reduce_grobner.h  sparse_jordan.h
src/algebra/vec/: Formatter.h  Monomial.h  PolyVec.h  Polynomial.h
src/billiards_common/attempts/: AttemptResult.h  Attemptable.h  ShotAttempt.h
src/billiards_common/config/: Ball.h  MappingInfo.h  Pocket.h  PoolConfiguration.h  Rail.h  RenderLocation.h  Table.h  TableDimensions.h  TableGeometry.h
src/billiards_common/geometry/: Complex.h  Dimensions.h  Line.h  Maybe.h  Point.h  geometry.h  polynomial.h  tolerance.h
src/billiards_common/graphics/: Circle.h  Color.h  GraphicsPrimitive.h  GraphicsReceiver.h  Image.h  Lines.h  Polygon.h  ShapeGraphics.h  Text.h  parse_graphics.h
src/billiards_common/layouts/: DetailedLayout.h  Layout.h  LayoutListItem.h  LayoutShot.h
src/billiards_common/math/: Complex.h  newton.h  polynomial.h  quad_systems.h
src/billiards_common/shots/: CueingInfo.h  Layout.h  LocatedBall.h  Locations.h  RollingGlanceCalculation.h  Shot.h  ShotInformation.h  ShotStep.h  StepDestination.h  StepWildCard.h  Target.h  VirtualBall.h  shot_helpers.h  shot_is_possible.h
src/common/config/: Ball.h  (+6 more)
(+77 files in other folders)
